--- a/Data Madness.ipynb
+++ b/Data Madness.ipynb
@@ -4,8 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data Madness\n",
-    "# The effect of VAR on the 2019-20 Premier League Season"
+    "# Data Madness\n",
+    "## The effect of VAR on the 2019-20 Premier League Season\n",
+    "\n",
+    "Video Assisted Referee (VAR) was introduced in the Premier League for the 2019-20 season and brought with it its load of controversies. The aim of this project is to analyse the impact of VAR on its introduction season. The research questions are the following:\n",
+    "\n",
+    "1. For what type of incidents is VAR most used?\n",
+    "\n",
+    "2. Is there a gap between the number of overturned decisions for and against each team? \n",
+    "\n",
+    "3. Is the number of disallowed goals significant? Would the season have been different if these goals were not disallowed?\n",
+    "\n",
+    "To answer them, two datasets are used: VAR_Incidents_Stats, that describes the types of incidents the VAR was used for, and VAR_Team_Stats, that describes the number of overturned decisions per team and how did these decisions affect the game."
    ]
   },
   {
@@ -15,6 +25,13 @@
    "outputs": [],
    "source": [
     "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's first import the datasets."
    ]
   },
   {
@@ -63,8 +80,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -163,6 +182,59 @@
    "source": [
     "team_Stats = pd.read_csv ('VAR_Team_Stats.csv')\n",
     "print (team_Stats)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 1. For what type of incidents is VAR most used?\n",
+    "This question will be answered using the first dataset (i.e. VAR_Incidents_Stats). The dataset will first be cleaned in order to keep only the relevant information. Afterwards, a string search in the \"Incident\" column will be executed, followed by a frequency analysis to determine the frequency of each incident type."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#code etc"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2. Is there a gap between the number of overturned decisions for and against each team? \n",
+    "\n",
+    "This second question will be answered using the \"VAR_Teams_Stats\" dataset. After cleaning it, the number of overturned decisions for and against each team will be analysed and presented in a suitable manner."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#code etc"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Is the number of disallowed goals significant? Would the season have been different if these goals were not disallowed?\n",
+    "\n",
+    "This question will also be answered using the second dataset (i.e. VAR_Team_Stats). The aim is to analyse the number of goals that were disallowed by the VAR or attributed thanks to it. An alternative league table will then be calculated and compared with the final 2019-20 Premier League table."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#code etc"
    ]
   }
  ],
