--- a/Data Madness.ipynb
+++ b/Data Madness.ipynb
@@ -193,13 +193,66 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The first step is to delete every column except the relevant one."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      Brighton goal for Leandro Trossard ruled out f...\n",
+       "1      Conor Hourihane goal ruled out for a foul by W...\n",
+       "2      Penalty awarded (scored by Neil Maupay) for fo...\n",
+       "3      Jamie Vardy penalty retaken after James Maddis...\n",
+       "4                 David Luiz goal disallowed for offside\n",
+       "                             ...                        \n",
+       "213    Connor Wickham goal awarded after originally b...\n",
+       "214    Red card for Ben Godfrey for foul on Callum Wi...\n",
+       "215    Goal for Kelechi Iheanacho disallowed for hand...\n",
+       "216    Red card for Emiliano Buendia for an elbow on ...\n",
+       "217        Goal for Onel Hernandez ruled out for offside\n",
+       "Name: Incident, Length: 218, dtype: object"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Keep only the \"Incident\" column\n",
+    "\n",
+    "incidents_cleaned = incidents ['Incident']\n",
+    "incidents_cleaned"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A string search will now be executed to determine the most frequent types of incidents reviewed by the VAR. The incidents are separated in 7 different categories:\n",
+    "1. A goal ruled out for offside\n",
+    "2. A goal ruled out for a foul (by the attacking team)\n",
+    "3. A goal ruled out for a handball (by the attacking team)\n",
+    "4. A penalty that needs to be retaken\n",
+    "5. A goal allowed after being disallowed by the referees\n",
+    "6. A penalty awarded\n",
+    "7. A penalty cancelled "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#code etc"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
