--- a/Data Madness.ipynb
+++ b/Data Madness.ipynb
@@ -20,11 +20,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -79,8 +81,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {
     "scrolled": true
    },
@@ -180,8 +187,8 @@
     }
    ],
    "source": [
-    "team_Stats = pd.read_csv ('VAR_Team_Stats.csv')\n",
-    "print (team_Stats)"
+    "teams = pd.read_csv ('VAR_Team_Stats.csv')\n",
+    "print (teams)"
    ]
   },
   {
@@ -260,16 +267,450 @@
    "source": [
     "# 2. Is there a gap between the number of overturned decisions for and against each team? \n",
     "\n",
-    "This second question will be answered using the \"VAR_Teams_Stats\" dataset. After cleaning it, the number of overturned decisions for and against each team will be analysed and presented in a suitable manner."
+    "This second question will be answered using the \"VAR_Teams_Stats\" dataset. After cleaning it, the number of overturned decisions for and against each team will be analysed and presented in a suitable manner. \n",
+    "Let's first display a table where the teams will be sorted by the number of overturned decisions in their games, in descending order."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 30,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Team</th>\n",
+       "      <th>Overturns</th>\n",
+       "      <th>Leading to goals for</th>\n",
+       "      <th>Disallowed goals for</th>\n",
+       "      <th>Leading to goals against</th>\n",
+       "      <th>Disallowed goals against</th>\n",
+       "      <th>Net goal score</th>\n",
+       "      <th>Subjective decisions for</th>\n",
+       "      <th>Subjective decisions against</th>\n",
+       "      <th>Net subjective score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>West Ham</td>\n",
+       "      <td>16</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>-5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Manchester City</td>\n",
+       "      <td>16</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Leicester City</td>\n",
+       "      <td>15</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Tottenham Hotspur</td>\n",
+       "      <td>15</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Southampton</td>\n",
+       "      <td>13</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>-3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Manchester United</td>\n",
+       "      <td>13</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>7</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Brighton &amp; Hove Albion</td>\n",
+       "      <td>12</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>AFC Bournemouth</td>\n",
+       "      <td>12</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>-2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Crystal Palace</td>\n",
+       "      <td>12</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Chelsea</td>\n",
+       "      <td>12</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Sheffield United</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>Norwich City</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>-4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Burnley</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Wolves</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Arsenal</td>\n",
+       "      <td>9</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>-3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Liverpool</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Everton</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Aston Villa</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Watford</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>-2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Newcastle</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      Team  Overturns  Leading to goals for  \\\n",
+       "16                West Ham         16                     1   \n",
+       "9          Manchester City         16                     3   \n",
+       "7           Leicester City         15                     1   \n",
+       "8        Tottenham Hotspur         15                     1   \n",
+       "5              Southampton         13                     0   \n",
+       "1        Manchester United         13                     1   \n",
+       "0   Brighton & Hove Albion         12                     2   \n",
+       "12         AFC Bournemouth         12                     2   \n",
+       "2           Crystal Palace         12                     3   \n",
+       "13                 Chelsea         12                     2   \n",
+       "17        Sheffield United         11                     0   \n",
+       "19            Norwich City         11                     0   \n",
+       "3                  Burnley         11                     2   \n",
+       "18                  Wolves          9                     1   \n",
+       "10                 Arsenal          9                     4   \n",
+       "6                Liverpool          8                     1   \n",
+       "11                 Everton          7                     2   \n",
+       "15             Aston Villa          7                     0   \n",
+       "14                 Watford          6                     1   \n",
+       "4                Newcastle          3                     1   \n",
+       "\n",
+       "    Disallowed goals for  Leading to goals against  Disallowed goals against  \\\n",
+       "16                     5                         5                         4   \n",
+       "9                      4                         2                         2   \n",
+       "7                      3                         1                         4   \n",
+       "8                      4                         1                         6   \n",
+       "5                      0                         1                         7   \n",
+       "1                      0                         2                         7   \n",
+       "0                      2                         0                         7   \n",
+       "12                     5                         1                         1   \n",
+       "2                      4                         0                         1   \n",
+       "13                     4                         2                         2   \n",
+       "17                     5                         1                         2   \n",
+       "19                     2                         2                         2   \n",
+       "3                      3                         1                         4   \n",
+       "18                     4                         1                         1   \n",
+       "10                     2                         1                         0   \n",
+       "6                      3                         0                         4   \n",
+       "11                     2                         1                         1   \n",
+       "15                     3                         1                         1   \n",
+       "14                     1                         2                         1   \n",
+       "4                      0                         0                         0   \n",
+       "\n",
+       "    Net goal score  Subjective decisions for  Subjective decisions against  \\\n",
+       "16              -5                         2                             1   \n",
+       "9               -1                         4                             4   \n",
+       "7                1                         3                             3   \n",
+       "8                2                         3                             3   \n",
+       "5                6                         1                             4   \n",
+       "1                6                         6                             2   \n",
+       "0                7                         2                             0   \n",
+       "12              -3                         2                             4   \n",
+       "2                2                         6                             2   \n",
+       "13              -2                         4                             4   \n",
+       "17              -4                         1                             2   \n",
+       "19              -4                         1                             5   \n",
+       "3                2                         4                             2   \n",
+       "18              -3                         2                             1   \n",
+       "10               1                         1                             4   \n",
+       "6                2                         1                             1   \n",
+       "11               0                         2                             2   \n",
+       "15              -3                         2                             3   \n",
+       "14              -1                         1                             3   \n",
+       "4                1                         2                             0   \n",
+       "\n",
+       "    Net subjective score  \n",
+       "16                     1  \n",
+       "9                      0  \n",
+       "7                      0  \n",
+       "8                      0  \n",
+       "5                     -3  \n",
+       "1                      4  \n",
+       "0                      2  \n",
+       "12                    -2  \n",
+       "2                      4  \n",
+       "13                     0  \n",
+       "17                    -1  \n",
+       "19                    -4  \n",
+       "3                      2  \n",
+       "18                     1  \n",
+       "10                    -3  \n",
+       "6                      0  \n",
+       "11                     0  \n",
+       "15                    -1  \n",
+       "14                    -2  \n",
+       "4                      2  "
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#code etc"
+    "sorted_teams = teams.sort_values(\"Overturns\",ascending=False)\n",
+    "sorted_teams"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    20.00000\n",
+       "mean     10.90000\n",
+       "std       3.49285\n",
+       "min       3.00000\n",
+       "25%       8.75000\n",
+       "50%      11.50000\n",
+       "75%      13.00000\n",
+       "max      16.00000\n",
+       "Name: Overturns, dtype: float64"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted_teams['Overturns'].describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can see that the teams that had the most decisions overturned by VAR are West Ham and Manchester City, with 16 overturned decisions, so exactly one overturned decision every 2 games. On the other hand, the team with the least amount of overturned decisions is Newcastle, with only 3 referee decisions corrected by the VAR in the season. \n",
+    "The average number of overturned decisions per game is 11. The median is really close (11.5) and the standard deviation is 3.5. \n",
+    "The number of overturned decisions leading to goals for and against each team will now be analysed."
    ]
   },
   {
