--- a/Data Madness.ipynb
+++ b/Data Madness.ipynb
@@ -45,7 +45,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The winner was Liverpool, followed by Manchester City, Manchester United and Chelsea, who were all qualified for the 2020-2021 Champions League. Leicester and Tottenham were qualified for the Europa League thanks to their rankings, while Arsenal was qualified for the competition after winning the 2019-20 FA Cup. Therefore, Arsenal's final ranking did not affect their Europa League Qualification. Finally, Bournemouth, Watford and Norwich City were relegated to the EFL Championship."
+    "The season's winner was Liverpool, followed by Manchester City, Manchester United and Chelsea, who were all qualified for the 2020-2021 Champions League. Leicester and Tottenham were qualified for the Europa League thanks to their rankings, while Arsenal was qualified for the competition after winning the 2019-20 FA Cup. Therefore, Arsenal's final ranking did not affect their Europa League Qualification. Finally, Bournemouth, Watford and Norwich City were relegated to the EFL Championship."
    ]
   },
   {
