--- a/Data Madness.ipynb
+++ b/Data Madness.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Data Madness\n",
-    "## The effect of VAR on the 2019-20 Premier League Season\n",
+    "## VAR's influence on the 2019-20 Premier League Season\n",
     "\n",
     "Video Assisted Referee (VAR) was introduced in the Premier League for the 2019-20 season and brought with it its load of controversies. The aim of this project is to analyse the impact of VAR on its introduction season. The research questions are the following:\n",
     "\n",
