--- a/Data Madness.ipynb
+++ b/Data Madness.ipynb
@@ -9,11 +9,11 @@
     "\n",
     "Video Assisted Referee (VAR) was introduced in the Premier League for the 2019-20 season and brought with it its load of controversies. The aim of this project is to analyse the impact of VAR on its introduction season. The research questions are the following:\n",
     "\n",
-    "1. For what type of incidents is VAR most used?\n",
+    "## 1. For what type of incidents is VAR most used?\n",
     "\n",
-    "2. Is there a gap between the number of overturned decisions for and against each team? \n",
+    "## 2. Is there a gap between the number of overturned decisions for and against each team? \n",
     "\n",
-    "3. Is the number of disallowed goals significant? Would the season have been different if these goals were not disallowed?\n",
+    "## 3. Is the number of disallowed goals significant? Would the season have been different if these goals were not disallowed?\n",
     "\n",
     "To answer them, two datasets are used: VAR_Incidents_Stats, that describes the types of incidents the VAR was used for, and VAR_Team_Stats, that describes the number of overturned decisions per team and how did these decisions affect the game.\n",
     "For information, this is the final Premier League Table."
