--- a/Data Madness.ipynb
+++ b/Data Madness.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "Video Assisted Referee (VAR) was introduced in the Premier League for the 2019-20 season and brought with it its load of controversies. The aim of this project is to analyse the impact of VAR on its introduction season. The research questions are the following:\n",
     "\n",
-    "## 1. For what type of incidents is VAR most used?\n",
+    "## 1. What type of incidents was VAR most used for?\n",
     "\n",
     "## 2. Is there a gap between the number of overturned decisions for and against each team? \n",
     "\n",
@@ -220,7 +220,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1. For what type of incidents is VAR most used?\n",
+    "# 1. What type of incidents was VAR most used for?\n",
     "This question will be answered using the first dataset (i.e. VAR_Incidents_Stats). The dataset will first be cleaned in order to keep only the relevant information. Afterwards, a string search in the \"Incident\" column will be executed, followed by a frequency analysis to determine the frequency of each incident type."
    ]
   },
@@ -269,7 +269,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A string search will now be executed to determine the most frequent types of incidents reviewed by the VAR. The incidents are separated in 7 different categories:\n",
+    "A string search will now be executed to determine the most frequent types of incidents reviewed by VAR. The incidents are separated in 7 different categories:\n",
     "1. A goal ruled out for offside\n",
     "2. A goal ruled out for a foul (by the attacking team)\n",
     "3. A goal ruled out for a handball (by the attacking team)\n",
