--- a/Data Madness.ipynb
+++ b/Data Madness.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -679,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -788,26 +788,6 @@
        "      <td>FOR</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>Manchester United</td>\n",
-       "      <td>Arsenal</td>\n",
-       "      <td>Sept. 30</td>\n",
-       "      <td>H</td>\n",
-       "      <td>pierre-emerick aubameyang goal, originally rul...</td>\n",
-       "      <td>58th minute</td>\n",
-       "      <td>AGAINST</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>Crystal Palace</td>\n",
-       "      <td>West Ham</td>\n",
-       "      <td>Oct. 5</td>\n",
-       "      <td>A</td>\n",
-       "      <td>jordan ayew goal awarded after originally bein...</td>\n",
-       "      <td>87th minute</td>\n",
-       "      <td>FOR</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>29</th>\n",
        "      <td>Crystal Palace</td>\n",
        "      <td>Southampton</td>\n",
@@ -816,16 +796,6 @@
        "      <td>goal for max meyer ruled out for offside by wi...</td>\n",
        "      <td>15th minute</td>\n",
        "      <td>AGAINST</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30</th>\n",
-       "      <td>Crystal Palace</td>\n",
-       "      <td>Norwich</td>\n",
-       "      <td>Jan. 1</td>\n",
-       "      <td>A</td>\n",
-       "      <td>connor wickham goal awarded after originally b...</td>\n",
-       "      <td>85th minute</td>\n",
-       "      <td>FOR</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>37</th>\n",
@@ -856,16 +826,6 @@
        "      <td>jay rodriguez goal ruled out for offside again...</td>\n",
        "      <td>57th minute</td>\n",
        "      <td>AGAINST</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>48</th>\n",
-       "      <td>Newcastle</td>\n",
-       "      <td>Sheffield United</td>\n",
-       "      <td>Dec. 5</td>\n",
-       "      <td>A</td>\n",
-       "      <td>jonjo shelvey goal, originally ruled out for o...</td>\n",
-       "      <td>70th minute</td>\n",
-       "      <td>FOR</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>53</th>\n",
@@ -998,16 +958,6 @@
        "      <td>FOR</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>118</th>\n",
-       "      <td>Arsenal</td>\n",
-       "      <td>Man United</td>\n",
-       "      <td>Sept. 30</td>\n",
-       "      <td>A</td>\n",
-       "      <td>pierre-emerick aubameyang goal, originally rul...</td>\n",
-       "      <td>58th minute</td>\n",
-       "      <td>FOR</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>130</th>\n",
        "      <td>Everton</td>\n",
        "      <td>Man City</td>\n",
@@ -1015,16 +965,6 @@
        "      <td>A</td>\n",
        "      <td>goal for phil foden ruled out for offside in b...</td>\n",
        "      <td>12th minute</td>\n",
-       "      <td>FOR</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>135</th>\n",
-       "      <td>AFC Bournemouth</td>\n",
-       "      <td>West Ham</td>\n",
-       "      <td>Sept. 28</td>\n",
-       "      <td>H</td>\n",
-       "      <td>josh king goal, originally ruled out for offsi...</td>\n",
-       "      <td>17th minute</td>\n",
        "      <td>FOR</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1098,36 +1038,6 @@
        "      <td>FOR</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>174</th>\n",
-       "      <td>West Ham</td>\n",
-       "      <td>AFC Bournemouth</td>\n",
-       "      <td>Sept. 28</td>\n",
-       "      <td>A</td>\n",
-       "      <td>josh king goal, originally ruled out for offsi...</td>\n",
-       "      <td>17th minute</td>\n",
-       "      <td>AGAINST</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>175</th>\n",
-       "      <td>West Ham</td>\n",
-       "      <td>Crystal Palace</td>\n",
-       "      <td>Oct. 5</td>\n",
-       "      <td>H</td>\n",
-       "      <td>jordan ayew goal awarded after originally bein...</td>\n",
-       "      <td>87th minute</td>\n",
-       "      <td>AGAINST</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>189</th>\n",
-       "      <td>Sheffield United</td>\n",
-       "      <td>Newcastle</td>\n",
-       "      <td>Dec. 5</td>\n",
-       "      <td>H</td>\n",
-       "      <td>jonjo shelvey goal, originally ruled out for o...</td>\n",
-       "      <td>70th minute</td>\n",
-       "      <td>AGAINST</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>194</th>\n",
        "      <td>Sheffield United</td>\n",
        "      <td>Manchester City</td>\n",
@@ -1168,16 +1078,6 @@
        "      <td>AGAINST</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>213</th>\n",
-       "      <td>Norwich City</td>\n",
-       "      <td>Crystal Palace</td>\n",
-       "      <td>Jan. 1</td>\n",
-       "      <td>H</td>\n",
-       "      <td>connor wickham goal awarded after originally b...</td>\n",
-       "      <td>85th minute</td>\n",
-       "      <td>AGAINST</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>217</th>\n",
        "      <td>Norwich City</td>\n",
        "      <td>Man City</td>\n",
@@ -1197,14 +1097,10 @@
        "7    Brighton & Hove Albion         Tottenham   Dec. 26    A   \n",
        "8    Brighton & Hove Albion       Bournemouth   Dec. 28    H   \n",
        "11   Brighton & Hove Albion           Burnley   July 26    A   \n",
-       "12        Manchester United           Arsenal  Sept. 30    H   \n",
-       "25           Crystal Palace          West Ham    Oct. 5    A   \n",
        "29           Crystal Palace       Southampton   Dec. 28    A   \n",
-       "30           Crystal Palace           Norwich    Jan. 1    A   \n",
        "37                  Burnley       Aston Villa  Sept. 28    A   \n",
        "42                  Burnley       Aston Villa    Jan. 1    H   \n",
        "47                  Burnley          Brighton   July 26    H   \n",
-       "48                Newcastle  Sheffield United    Dec. 5    A   \n",
        "53              Southampton            Wolves   Oct. 19    A   \n",
        "56              Southampton    Crystal Palace   Dec. 28    H   \n",
        "58              Southampton         Leicester   Jan. 11    A   \n",
@@ -1218,9 +1114,7 @@
        "108         Manchester City  Sheffield United   Dec. 29    H   \n",
        "109         Manchester City           Everton    Jan. 1    H   \n",
        "117         Manchester City           Norwich   July 26    H   \n",
-       "118                 Arsenal        Man United  Sept. 30    A   \n",
        "130                 Everton          Man City    Jan. 1    A   \n",
-       "135         AFC Bournemouth          West Ham  Sept. 28    H   \n",
        "137         AFC Bournemouth          Brighton   Dec. 28    A   \n",
        "147                 Chelsea         Liverpool  Sept. 22    H   \n",
        "160                 Watford         Liverpool   Dec. 14    A   \n",
@@ -1228,14 +1122,10 @@
        "167             Aston Villa           Burnley    Jan. 1    A   \n",
        "171                West Ham          Man City   Aug. 10    H   \n",
        "173                West Ham          Brighton   Aug. 17    A   \n",
-       "174                West Ham   AFC Bournemouth  Sept. 28    A   \n",
-       "175                West Ham    Crystal Palace    Oct. 5    H   \n",
-       "189        Sheffield United         Newcastle    Dec. 5    H   \n",
        "194        Sheffield United   Manchester City   Dec. 29    A   \n",
        "199                  Wolves       Southampton   Oct. 19    H   \n",
        "203                  Wolves         Liverpool   Dec. 29    A   \n",
        "212            Norwich City         Tottenham   Dec. 28    H   \n",
-       "213            Norwich City    Crystal Palace    Jan. 1    H   \n",
        "217            Norwich City          Man City   July 26    A   \n",
        "\n",
        "                                              Incident         Time VAR used  \n",
@@ -1243,14 +1133,10 @@
        "7                harry kane goal ruled out for offside  24th minute      FOR  \n",
        "8                  dan burn goal ruled out for offside  58th minute  AGAINST  \n",
        "11   jay rodriguez goal ruled out for offside again...  57th minute      FOR  \n",
-       "12   pierre-emerick aubameyang goal, originally rul...  58th minute  AGAINST  \n",
-       "25   jordan ayew goal awarded after originally bein...  87th minute      FOR  \n",
        "29   goal for max meyer ruled out for offside by wi...  15th minute  AGAINST  \n",
-       "30   connor wickham goal awarded after originally b...  85th minute      FOR  \n",
        "37   goal for villa's john mcginn ruled out on revi...  25th minute      FOR  \n",
        "42   goal for villa's jack grealish ruled out on re...  11th minute      FOR  \n",
        "47   jay rodriguez goal ruled out for offside again...  57th minute  AGAINST  \n",
-       "48   jonjo shelvey goal, originally ruled out for o...  70th minute      FOR  \n",
        "53   raul jimenez goal ruled out for offside agains...  42nd minute      FOR  \n",
        "56   goal for max meyer ruled out for offside by wi...  15th minute      FOR  \n",
        "58              jonny evans goal ruled out for offside  90th minute      FOR  \n",
@@ -1264,9 +1150,7 @@
        "108         goal for lys mousset ruled out for offside  29th minute      FOR  \n",
        "109  goal for phil foden ruled out for offside in b...  12th minute  AGAINST  \n",
        "117      goal for onel hernandez ruled out for offside   7th minute      FOR  \n",
-       "118  pierre-emerick aubameyang goal, originally rul...  58th minute      FOR  \n",
        "130  goal for phil foden ruled out for offside in b...  12th minute      FOR  \n",
-       "135  josh king goal, originally ruled out for offsi...  17th minute      FOR  \n",
        "137                dan burn goal ruled out for offside  58th minute      FOR  \n",
        "147  goal ruled out after mason mount was offside i...  27th minute  AGAINST  \n",
        "160              sadio mane goal ruled out for offside  51st minute      FOR  \n",
@@ -1274,27 +1158,25 @@
        "167  goal for villa's jack grealish ruled out on re...  11th minute  AGAINST  \n",
        "171  city goal for gabriel jesus ruled out for an o...  53rd minute      FOR  \n",
        "173  brighton goal for leandro trossard ruled out f...  27th minute      FOR  \n",
-       "174  josh king goal, originally ruled out for offsi...  17th minute  AGAINST  \n",
-       "175  jordan ayew goal awarded after originally bein...  87th minute  AGAINST  \n",
-       "189  jonjo shelvey goal, originally ruled out for o...  70th minute  AGAINST  \n",
        "194         goal for lys mousset ruled out for offside  29th minute  AGAINST  \n",
        "199  raul jimenez goal ruled out for offside agains...  42nd minute  AGAINST  \n",
        "203  goal for pedro neto ruled out for offside in t...  45th minute  AGAINST  \n",
        "212             teemu pukki goal ruled out for offside  33rd minute  AGAINST  \n",
-       "213  connor wickham goal awarded after originally b...  85th minute  AGAINST  \n",
        "217      goal for onel hernandez ruled out for offside   7th minute  AGAINST  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "offside = incidents[incidents['Incident'].str.contains(\"ruled out\")&incidents['Incident'].str.contains(\"offside\")]\n",
+    "offside = incidents[incidents['Incident'].str.contains(\"ruled out\")&incidents['Incident'].str.contains(\"offside\")&~incidents['Incident'].str.contains(\"awarded\")&~incidents['Incident'].str.contains(\"originally\")]\n",
     "offside\n",
     "#The problem here is that it displays goals that have been awarded after being ruled out for offside.\n",
-    "#We need to find a way to look for a string that doesn't contain \"awarded\" or change the question a bit"
+    "#We need to find a way to look for a string that doesn't contain \"awarded\" or change the question a bit\n",
+    "\n",
+    "#removed all instances containing awarded and originally, think that solves the issue"
    ]
   },
   {
@@ -1307,7 +1189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -1497,7 +1379,7 @@
        "207  chelsea goal for kurt zouma disallowed for a f...  77th minute      FOR  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1516,7 +1398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -1641,16 +1523,6 @@
        "      <td>sadio mane goal ruled out for handball</td>\n",
        "      <td>43rd minute</td>\n",
        "      <td>AGAINST</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>68</th>\n",
-       "      <td>Liverpool</td>\n",
-       "      <td>Wolves</td>\n",
-       "      <td>Dec. 29</td>\n",
-       "      <td>H</td>\n",
-       "      <td>goal for sadio mane given after originally rul...</td>\n",
-       "      <td>42nd minute</td>\n",
-       "      <td>FOR</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>71</th>\n",
@@ -1873,16 +1745,6 @@
        "      <td>AGAINST</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>202</th>\n",
-       "      <td>Wolves</td>\n",
-       "      <td>Liverpool</td>\n",
-       "      <td>Dec. 29</td>\n",
-       "      <td>A</td>\n",
-       "      <td>goal for sadio mane given after originally rul...</td>\n",
-       "      <td>42nd minute</td>\n",
-       "      <td>AGAINST</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>215</th>\n",
        "      <td>Norwich City</td>\n",
        "      <td>Leicester</td>\n",
@@ -1907,7 +1769,6 @@
        "44                  Burnley        Bournemouth  Feb. 22    H   \n",
        "55              Southampton           West Ham  Dec. 14    H   \n",
        "65                Liverpool         Man United  Oct. 20    A   \n",
-       "68                Liverpool             Wolves  Dec. 29    H   \n",
        "71                Liverpool           Man City   July 2    A   \n",
        "72           Leicester City             Wolves  Aug. 11    H   \n",
        "84           Leicester City            Norwich  Feb. 28    A   \n",
@@ -1930,7 +1791,6 @@
        "195        Sheffield United           West Ham  Jan. 10    H   \n",
        "197        Sheffield United          Tottenham   July 2    H   \n",
        "198                  Wolves          Leicester  Aug. 11    A   \n",
-       "202                  Wolves          Liverpool  Dec. 29    A   \n",
        "215            Norwich City          Leicester  Feb. 28    H   \n",
        "\n",
        "                                              Incident         Time VAR used  \n",
@@ -1943,7 +1803,6 @@
        "44   goal for harry wilson ruled out for handball b...  57th minute      FOR  \n",
        "55     goal for michail antonio ruled out for handball  52nd minute      FOR  \n",
        "65              sadio mane goal ruled out for handball  43rd minute  AGAINST  \n",
-       "68   goal for sadio mane given after originally rul...  42nd minute      FOR  \n",
        "71   city goal for riyad mahrez ruled out for handb...  90th minute      FOR  \n",
        "72   wolves goal for leander dendoncker disallowed ...  51st minute      FOR  \n",
        "84   goal for kelechi iheanacho disallowed for hand...  49th minute  AGAINST  \n",
@@ -1966,19 +1825,18 @@
        "195  goal for robert snodgrass ruled out for handba...  90th minute      FOR  \n",
        "197  goal for harry kane ruled out for handball in ...  32nd minute      FOR  \n",
        "198  wolves goal for leander dendoncker disallowed ...  51st minute  AGAINST  \n",
-       "202  goal for sadio mane given after originally rul...  42nd minute  AGAINST  \n",
        "215  goal for kelechi iheanacho disallowed for hand...  49th minute      FOR  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "handball = incidents[incidents['Incident'].str.contains(\"ruled out\")&incidents['Incident'].str.contains(\"handball\")|incidents['Incident'].str.contains(\"disallowed\")&incidents['Incident'].str.contains(\"handball\")]\n",
+    "handball = incidents[incidents['Incident'].str.contains(\"ruled out\")&incidents['Incident'].str.contains(\"handball\")&~incidents['Incident'].str.contains(\"originally\")|incidents['Incident'].str.contains(\"disallowed\")&incidents['Incident'].str.contains(\"handball\")&~incidents['Incident'].str.contains(\"originally\")]\n",
     "handball\n",
-    "#One error (l.202) "
+    "#One error (l.202)  fixed by making sure it doesnt contain originally"
    ]
   },
   {
@@ -1990,7 +1848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 13,
    "metadata": {
     "scrolled": false
    },
@@ -2132,7 +1990,7 @@
        "210  pierre-emerick aubameyang missed penalty retak...  29th minute  AGAINST  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2151,7 +2009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -2341,7 +2199,7 @@
        "202  goal for sadio mane given after originally rul...  42nd minute  AGAINST  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2360,7 +2218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -2932,7 +2790,7 @@
        "209  penalty awarded (missed by anthony martial) fo...  41st minute  AGAINST  "
       ]
      },
-     "execution_count": 45,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3099,7 +2957,7 @@
    "source": [
     "penalties_cancelled = incidents[incidents['Incident'].str.contains(\"penalty\") & incidents['Incident'].str.contains(\"cancelled\")]\n",
     "penalties_cancelled\n",
-    "#We need to look for penalties cancelled but not awarded"
+    "#We need to look for penalties cancelled but not awarded  i think it only shows penalties cancelled"
    ]
   },
   {
@@ -3600,7 +3458,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
