--- a/Data Madness.ipynb
+++ b/Data Madness.ipynb
@@ -711,9 +711,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -1165,18 +1165,17 @@
        "217      goal for onel hernandez ruled out for offside   7th minute  AGAINST  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Displays incidents that contain the words \"ruled out\" and \"offside\".\n",
+    "#In order to avoid having the goals that have been awarded after being ruled out for offside,\n",
+    "#these incidents don't contain the word \"originally\".\n",
     "offside = incidents[incidents['Incident'].str.contains(\"ruled out\")&incidents['Incident'].str.contains(\"offside\")&~incidents['Incident'].str.contains(\"awarded\")&~incidents['Incident'].str.contains(\"originally\")]\n",
-    "offside\n",
-    "#The problem here is that it displays goals that have been awarded after being ruled out for offside.\n",
-    "#We need to find a way to look for a string that doesn't contain \"awarded\" or change the question a bit\n",
-    "\n",
-    "#removed all instances containing awarded and originally, think that solves the issue"
+    "offside"
    ]
   },
   {
@@ -1189,7 +1188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -1379,12 +1378,13 @@
        "207  chelsea goal for kurt zouma disallowed for a f...  77th minute      FOR  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Displays goals that have been \"ruled out\" because of a foul or that have been \"disallowed\" because of a foul\n",
     "foul = incidents[incidents['Incident'].str.contains(\"ruled out\")&incidents['Incident'].str.contains(\"foul\")|incidents['Incident'].str.contains(\"disallowed\")&incidents['Incident'].str.contains(\"foul\")]\n",
     "foul"
    ]
@@ -1398,7 +1398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {
     "scrolled": true
    },
@@ -1828,7 +1828,7 @@
        "215  goal for kelechi iheanacho disallowed for hand...  49th minute      FOR  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1836,7 +1836,8 @@
    "source": [
     "handball = incidents[incidents['Incident'].str.contains(\"ruled out\")&incidents['Incident'].str.contains(\"handball\")&~incidents['Incident'].str.contains(\"originally\")|incidents['Incident'].str.contains(\"disallowed\")&incidents['Incident'].str.contains(\"handball\")&~incidents['Incident'].str.contains(\"originally\")]\n",
     "handball\n",
-    "#One error (l.202)  fixed by making sure it doesnt contain originally"
+    "#We added the constraint that the incidents don't include to word \"originally\" to avoid goals that have been\n",
+    "#given after being ruled out"
    ]
   },
   {
@@ -1848,7 +1849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {
     "scrolled": false
    },
@@ -1990,12 +1991,13 @@
        "210  pierre-emerick aubameyang missed penalty retak...  29th minute  AGAINST  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Look for sentences containing the words \"penalty\" and \"retaken\"\n",
     "penalty_retaken = incidents[incidents['Incident'].str.contains(\"penalty\")&incidents['Incident'].str.contains(\"retaken\")]\n",
     "penalty_retaken"
    ]
@@ -2009,7 +2011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -2056,16 +2058,6 @@
        "      <td>FOR</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>45</th>\n",
-       "      <td>Burnley</td>\n",
-       "      <td>Man City</td>\n",
-       "      <td>June 22</td>\n",
-       "      <td>A</td>\n",
-       "      <td>penalty given (scored by riyad mahrez) for a f...</td>\n",
-       "      <td>45th minute</td>\n",
-       "      <td>AGAINST</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>68</th>\n",
        "      <td>Liverpool</td>\n",
        "      <td>Wolves</td>\n",
@@ -2073,26 +2065,6 @@
        "      <td>H</td>\n",
        "      <td>goal for sadio mane given after originally rul...</td>\n",
        "      <td>42nd minute</td>\n",
-       "      <td>FOR</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>79</th>\n",
-       "      <td>Leicester City</td>\n",
-       "      <td>Everton</td>\n",
-       "      <td>Dec. 1</td>\n",
-       "      <td>H</td>\n",
-       "      <td>kelechi iheanacho effort, originally ruled off...</td>\n",
-       "      <td>94th minute</td>\n",
-       "      <td>FOR</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>113</th>\n",
-       "      <td>Manchester City</td>\n",
-       "      <td>Burnley</td>\n",
-       "      <td>June 22</td>\n",
-       "      <td>H</td>\n",
-       "      <td>penalty given (scored by riyad mahrez) for a f...</td>\n",
-       "      <td>45th minute</td>\n",
        "      <td>FOR</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2104,36 +2076,6 @@
        "      <td>alexandre lacazette goal allowed after incorre...</td>\n",
        "      <td>78th minute</td>\n",
        "      <td>FOR</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>129</th>\n",
-       "      <td>Everton</td>\n",
-       "      <td>Leicester</td>\n",
-       "      <td>Dec. 1</td>\n",
-       "      <td>A</td>\n",
-       "      <td>kelechi iheanacho effort, originally ruled off...</td>\n",
-       "      <td>94th minute</td>\n",
-       "      <td>AGAINST</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>136</th>\n",
-       "      <td>AFC Bournemouth</td>\n",
-       "      <td>Chelsea</td>\n",
-       "      <td>Dec. 14</td>\n",
-       "      <td>A</td>\n",
-       "      <td>dan gosling goal, originally disallowed for of...</td>\n",
-       "      <td>84th minute</td>\n",
-       "      <td>FOR</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>151</th>\n",
-       "      <td>Chelsea</td>\n",
-       "      <td>Bournemouth</td>\n",
-       "      <td>Dec. 14</td>\n",
-       "      <td>H</td>\n",
-       "      <td>dan gosling goal, originally disallowed for of...</td>\n",
-       "      <td>84th minute</td>\n",
-       "      <td>AGAINST</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>182</th>\n",
@@ -2172,40 +2114,30 @@
       "text/plain": [
        "                       Team           Opponent Team     Date Site  \\\n",
        "10   Brighton & Hove Albion                West Ham   Feb. 1    A   \n",
-       "45                  Burnley                Man City  June 22    A   \n",
        "68                Liverpool                  Wolves  Dec. 29    H   \n",
-       "79           Leicester City                 Everton   Dec. 1    H   \n",
-       "113         Manchester City                 Burnley  June 22    H   \n",
        "124                 Arsenal                West Ham  March 7    H   \n",
-       "129                 Everton               Leicester   Dec. 1    A   \n",
-       "136         AFC Bournemouth                 Chelsea  Dec. 14    A   \n",
-       "151                 Chelsea             Bournemouth  Dec. 14    H   \n",
        "182                West Ham  Brighton & Hove Albion   Feb. 1    H   \n",
        "183                West Ham                 Arsenal  March 7    A   \n",
        "202                  Wolves               Liverpool  Dec. 29    A   \n",
        "\n",
        "                                              Incident         Time VAR used  \n",
        "10   goal for glenn murray allowed after incorrect ...  79th minute      FOR  \n",
-       "45   penalty given (scored by riyad mahrez) for a f...  45th minute  AGAINST  \n",
        "68   goal for sadio mane given after originally rul...  42nd minute      FOR  \n",
-       "79   kelechi iheanacho effort, originally ruled off...  94th minute      FOR  \n",
-       "113  penalty given (scored by riyad mahrez) for a f...  45th minute      FOR  \n",
        "124  alexandre lacazette goal allowed after incorre...  78th minute      FOR  \n",
-       "129  kelechi iheanacho effort, originally ruled off...  94th minute  AGAINST  \n",
-       "136  dan gosling goal, originally disallowed for of...  84th minute      FOR  \n",
-       "151  dan gosling goal, originally disallowed for of...  84th minute  AGAINST  \n",
        "182  goal for glenn murray allowed after incorrect ...  79th minute  AGAINST  \n",
        "183  alexandre lacazette goal allowed after incorre...  78th minute  AGAINST  \n",
        "202  goal for sadio mane given after originally rul...  42nd minute  AGAINST  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "goal_allowed = incidents[incidents['Incident'].str.contains(\"allowed\") & incidents['Incident'].str.contains(\"after\")|incidents['Incident'].str.contains(\"given\")]\n",
+    "#Displays sentences with the words \"allowed\" and \"after\", or \"given\" and \"after\". \n",
+    "#This conveniently doesn't show penalties allowed after a referee decision\n",
+    "goal_allowed = incidents[incidents['Incident'].str.contains(\"allowed\") & incidents['Incident'].str.contains(\"after\")|incidents['Incident'].str.contains(\"given\")& incidents['Incident'].str.contains(\"after\")]\n",
     "goal_allowed"
    ]
   },
@@ -2218,7 +2150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -2790,12 +2722,13 @@
        "209  penalty awarded (missed by anthony martial) fo...  41st minute  AGAINST  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Displays awarded penalties\n",
     "penalties_awarded = incidents[incidents['Incident'].str.contains(\"penalty\") & incidents['Incident'].str.contains(\"awarded\")]\n",
     "penalties_awarded"
    ]
@@ -2809,7 +2742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -2949,15 +2882,15 @@
        "170  penalty cancelled, awarded for foul on jack gr...  47th minute  AGAINST  "
       ]
      },
-     "execution_count": 46,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Penalties cancelled after the referee's decision to allow it\n",
     "penalties_cancelled = incidents[incidents['Incident'].str.contains(\"penalty\") & incidents['Incident'].str.contains(\"cancelled\")]\n",
-    "penalties_cancelled\n",
-    "#We need to look for penalties cancelled but not awarded  i think it only shows penalties cancelled"
+    "penalties_cancelled"
    ]
   },
   {
@@ -2983,7 +2916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -3376,7 +3309,7 @@
        "4                      2  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3388,7 +3321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -3405,7 +3338,7 @@
        "Name: Overturns, dtype: float64"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3424,22 +3357,43 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Is the number of disallowed goals significant? Would the season have been different if these goals were not disallowed?\n",
+    "## 3. Is the number of overturned decisions significant? Would the season have been different if these goals were not disallowed?\n",
     "\n",
     "This question will also be answered using the second dataset (i.e. VAR_Team_Stats). The aim is to analyse the number of goals that were disallowed by the VAR or attributed thanks to it. An alternative league table will then be calculated and compared with the final 2019-20 Premier League table."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "#code etc"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -3458,7 +3412,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
